# web-settings

./: Cargo.toml  LICENSE  README.md  example.json
.circleci/: config.yml
locales/en-US/: main.ftl
locales/ru/: main.ftl
src/: config.rs  helpers.rs  lib.rs  main.rs  model.rs  views.rs
templates/: base.html
templates/pages/: error.html  index.html  policy.html  settings.html  submitted.html
