[package]
name = "web-settings"
version = "0.1.0"
authors = ["Alex Maystrenko <alexeytech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# It is rc, but I want to have modern futures 0.3
# So, people in gitter told me that's ok
gotham = "0.5.0-rc"
gotham_derive = "0.5.0-rc"

tera = "1.3"
lazy_static = "1.4"
mime = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
qrcode = "0.12"
futures = "0.3"
futures-util = "0.3"
hyper = "0.13"
url = "2.1"
rand_chacha = "0.2"
base64 = "0.12"
env_logger = "0.7"

[dev-dependencies]
cookie = "0.14"
