[package]
name = "web-settings"
version = "0.1.0"
authors = ["Alex Maystrenko <alexeytech@gmail.com>"]
edition = "2018"
default-run = "web-settings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-rt = "1.0"
actix-session = "0.4"
actix-http = "*"
clap = "2"
tera = "1.3"
lazy_static = "1.4"
mime = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
qrcode = "0.12"
futures = "0.3"
futures-util = "0.3"
hyper = "0.13"
url = "2.1"
rand_chacha = "0.2"
base64 = "0.12"
env_logger = "0.7"
fluent-templates = { version = "0.5", features = ["tera"] }
paste = "1.0.0"

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
cookie = "0.14"

[[bin]]
name = "template-test"
